--- a/pages/index.css
+++ b/pages/index.css
@@ -4,5 +4,15 @@
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
 @import url("../blocks/profile/profile.css");
+@import url("../blocks/elements/elements.css");
+@import url("../blocks/elements/__list/elements__list.css");
+@import url("../blocks/elements/__item/elements__item.css");
+@import url("../blocks/elements/__item-container/elements__item-container.css");
+@import url("../blocks/elements/__item-image/elements__item-image.css");
+@import url("../blocks/elements/__item-title/elements__item-title.css");
+@import url("../blocks/elements/__item-button/elements__item-button.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
+.none {
+  display: none;
+}
