--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -6,6 +6,7 @@
 
 @media screen and (max-width: 768px) {
   .header__logo {
+    padding: 0px 0px 0px 19px;
     width: 103px;
     height: 24px;
   }
