--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,20 +1,17 @@
 .header {
   max-width: 880px;
-  margin: 45px 200px 40px 200px;
+  margin: 45px auto 40px auto;
+  padding: 0px 19px 0px 19px;
   min-height: 74px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
-@media screen and (max-width: 1024px) {
-  .header {
-    margin: 45px 100px 40px 100px;
-  }
-}
+
 @media screen and (max-width: 768px) {
   .header {
     min-height: 56px;
-    margin: 28px 27px 74px 27px;
+    padding: 0px;
   }
 }
