--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,5 +1,10 @@
 .elements {
-  margin: 0 auto;
-  padding: 19px;
+  margin: 0 auto 66px auto;
+  padding: 0px 19px;
   max-width: 880px;
+}
+@media screen and (max-width: 768px) {
+  .elements {
+    margin-bottom: 48px;
+  }
 }
