--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,6 +1,15 @@
 .profile {
   max-width: 880px;
-  margin: 0px 200px 50px 200px;
+  margin: 0px auto 50px auto;
+  padding: 0 19px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .profile {
+    margin-bottom: 36px;
+    flex-direction: column;
+    row-gap: 36px;
+  }
 }
