--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,13 @@
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
 @import url("../blocks/profile/profile.css");
+@import url("../blocks/profile/__main/profile__main.css");
+@import url("../blocks/profile/__button-add/profile__button-add.css");
+@import url("../blocks/profile/__button/profile__button.css");
+@import url("../blocks/profile/__image/profile__image.css");
+@import url("../blocks/profile/__info/profile__info.css");
+@import url("../blocks/profile/__name/profile__name.css");
+@import url("../blocks/profile/__text/profile__text.css");
 @import url("../blocks/elements/elements.css");
 @import url("../blocks/elements/__list/elements__list.css");
 @import url("../blocks/elements/__item/elements__item.css");
