--- a/pages/index.css
+++ b/pages/index.css
@@ -20,6 +20,13 @@
 @import url("../blocks/elements/__item-button/elements__item-button.css");
 @import url("../blocks/footer/footer.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
-.none {
-  display: none;
-}
+@import url("../blocks/popup/popup.css");
+@import url("../blocks/popup/__container/popup__container.css");
+@import url("../blocks/popup/__button-close/popup__button-close.css");
+@import url("../blocks/popup/__title/popup__title.css");
+@import url("../blocks/popup/__label/popup__label.css");
+@import url("../blocks/popup/__input/popup__input.css");
+@import url("../blocks/popup/__button-submit/popup__button-submit.css");
+@import url("../blocks/popup/__input/_type/popup__input_type_text.css");
+@import url("../blocks/popup/__opened/popup__opened.css");
+@import url("../blocks/popup/__form/popup__form.css");
