--- a/blocks/elements/__item-button/elements__item-button.css
+++ b/blocks/elements/__item-button/elements__item-button.css
@@ -9,4 +9,9 @@
   min-width: 22px;
   transition: 0.2s;
   padding: 30px 30px 30px 0px;
+  cursor: pointer;
+}
+.elements__item-button:hover {
+  cursor: pointer;
+  opacity: 0.6;
 }
