--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,6 @@
 .footer__copyright {
   margin: 0;
+  padding: 0;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
@@ -8,6 +9,7 @@
 
 @media screen and (max-width: 768px) {
   .footer__copyright {
+    font-weight: 400;
     font-size: 14px;
     line-height: 17px;
   }
