--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -6,7 +6,7 @@
   position: absolute;
   top: -24px;
   left: calc(100% + 24px);
-  background-image: url(../../../images/Close\ Icon.svg);
+  background-image: url(../../../images/close.svg);
   border: none;
   background-color: transparent;
   background-position: 50%;
@@ -14,9 +14,12 @@
   background-size: cover;
   transform: translate(-50%, -50%);
   transition: 0.2s;
-  cursor: pointer;
 }
-@media screen and (max-width: 680px) {
+.popup__button-close:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+@media screen and (max-width: 768px) {
   .popup__button-close {
     height: 20px;
     left: 97%;
