--- a/blocks/popup/__button-submit/popup__button-submit.css
+++ b/blocks/popup/__button-submit/popup__button-submit.css
@@ -1,5 +1,5 @@
 .popup__button-submit {
-  margin: 0 0 34px;
+  margin: 18px 36px 34px 36px;
   padding: 14px 132px 18px 132px;
   background-color: #000;
   border: none;
@@ -11,11 +11,15 @@
   text-align: center;
   transition: 0.2s;
 }
-@media screen and (max-width: 680px) {
+.popup__button-submit:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+@media screen and (max-width: 768px) {
   .popup__button-submit {
+    margin: 15px 22px 25px 22px;
     font-size: 14px;
     line-height: 17px;
-    margin-bottom: 25px;
     padding: 14px 82px;
   }
 }
