--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,19 +1,16 @@
 .popup__title {
   margin: 34px 64px 54px 36px;
   width: 330px;
-  height: 23px;
   font-size: 24px;
   font-style: normal;
   font-weight: 900;
   line-height: 29px;
 }
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 768px) {
   .popup__title {
+    margin: 25px 22px 75px 22px;
     width: 238px;
-    margin: 0;
     font-size: 18px;
     line-height: 22px;
-    margin-bottom: 68px;
-    margin-top: 25px;
   }
 }
