--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -18,6 +18,7 @@
 }
 @media screen and (max-width: 768px) {
   .profile__button-add {
+    background-image: url(../../../images/Vector+1.svg);
     width: 100%;
     padding: 0 19px;
   }
