--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -7,3 +7,11 @@
   align-items: center;
   row-gap: 16px;
 }
+@media screen and (max-width: 768px) {
+  .profile__info {
+    grid-template-columns: 1fr 18px;
+    column-gap: 10px;
+    row-gap: 14px;
+    margin-left: 15px;
+  }
+}
