--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -6,4 +6,18 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  max-width: 336px;
+}
+@media screen and (max-width: 768px) {
+  .profile__text {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile__text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
