--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,7 @@
 @import url("../vendor/normalize.css");
 @import url("../vendor/fonts/fonts.css");
 @import url("../blocks/page/page.css");
+@import url("../blocks/content/content.css");
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
 @import url("../blocks/profile/profile.css");
@@ -28,5 +29,5 @@
 @import url("../blocks/popup/__input/popup__input.css");
 @import url("../blocks/popup/__button-submit/popup__button-submit.css");
 @import url("../blocks/popup/__input/_type/popup__input_type_text.css");
-@import url("../blocks/popup/__opened/popup__opened.css");
+@import url("../blocks/popup/_opened/popup_opened.css");
 @import url("../blocks/popup/__form/popup__form.css");
