--- a/blocks/elements/__item/elements__item.css
+++ b/blocks/elements/__item/elements__item.css
@@ -6,3 +6,9 @@
   border-radius: 10px;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 320px) {
+  .elements__item {
+    width: 282px;
+  }
+}
