--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,6 +2,7 @@
   width: 142px;
   height: 33px;
   cursor: pointer;
+  padding-left: 8px;
 }
 @media screen and (max-width: 1024px) {
   .header__logo {
