--- a/blocks/popup/__button-submit/popup__button-submit.css
+++ b/blocks/popup/__button-submit/popup__button-submit.css
@@ -1,6 +1,6 @@
 .popup__button-submit {
   margin: 18px 36px 34px 36px;
-  padding: 14px 132px 18px 132px;
+  padding: 14px 132px 16px 132px;
   background-color: #000;
   border: none;
   border-radius: 2px;
@@ -13,7 +13,7 @@
 }
 .popup__button-submit:hover {
   cursor: pointer;
-  opacity: 0.6;
+  opacity: 0.8;
 }
 @media screen and (max-width: 768px) {
   .popup__button-submit {
@@ -21,5 +21,10 @@
     font-size: 14px;
     line-height: 17px;
     padding: 14px 82px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .popup__button-submit {
+    margin-bottom: 25px;
   }
 }
