--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -9,6 +9,7 @@
   padding: 0;
   position: relative;
   width: 430px;
+  height: 330px;
 }
 @media screen and (max-width: 768px) {
   .popup__container {
