feat: js and popup

--- a/blocks/elements/__item-container/elements__item-container.css
+++ b/blocks/elements/__item-container/elements__item-container.css
@@ -4,9 +4,5 @@
   align-items: center;
   padding: 0 21px;
   background-color: #fff;
-}
-@media screen and (max-width: 320px) {
-  .elements__item-container {
-    height: 79px;
-  }
+  padding: 28px 15px 22px 21px;
 }
