--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -3,9 +3,11 @@
   top: 0;
   min-height: 100vh;
   width: 100%;
+  font-family: "Inter", Arial, sans-serif;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   color: #000;
   justify-content: center;
   display: none;
+  box-sizing: border-box;
 }
