--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,7 +7,8 @@
   flex-direction: column;
   margin: 0;
   padding: 0;
-  position: relative;
+  position: fixed;
+  top: 195px;
   width: 430px;
 }
 @media screen and (max-width: 768px) {
